# ai-reporting-plugin

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  folio_client.py  main.py  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: plugin.json
agents/: reporter.md  verifier.md
handoff/: PROTOCOL.md  reporter.md  verifier.md
skills/acq/: SKILL.md  invoices_report.py
skills/circ/: SKILL.md  checkout_report.py  verify_checkout_report.py
skills/inventory/: SKILL.md  blue_core_mcp.py
